<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">More Phone</string>
    <string name="message_progress_dialog">Please wait…</string>
    <string name="message_error_lost_internet">Please check internet!</string>
    <string name="message_error_send">Send message error</string>
    <string name="message_error_create_contact">Create contact error</string>
    <string name="message_error_update_contact">Update contact error</string>
    <string name="message_missing_info">Please enter all information</string>
    <string name="facebook_app_id">749741551871573</string>
    <string name="fb_login_protocol_scheme">fb749741551871573</string>
    <string name="com_auth0_client_id">F4yBiH4tGmxuPd0WaE4IASazuvAFHgdx</string>
    <string name="com_auth0_domain">morephone.auth0.com</string>
    <string name="all_price_unit">credits</string>
    <string name="all_price_buy_phone_number">3 credits</string>
    <string name="all_in_app_billing_error">In-app billing service is unavailable, please upgrade Android Market/Play to version >= 3.9.16</string>
    <string name="notification_money_title">More Phone</string>
    <string name="notification_money_description">Your more phone is out of money. Please add money to your account.</string>
    <string name="notification_missing_call">You missing call from </string>
    <string name="menu_buy_a_phone">Buy a phone</string>
    <string name="menu_credit">Credit</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_expire">Expire</string>
    <string name="menu_usage">Usage</string>
    <string name="menu_group_settings">Settings</string>
    <string name="menu_review">Review</string>
    <string name="menu_share">Share</string>
    <string name="menu_license">License</string>
    <string name="menu_logout">Logout</string>
    <string name="dialog_payment_visa">VISA ***** 0011</string>
    <string name="dialog_payment_paypal">Paypal</string>
    <string name="dialog_payment_add_card">Add Card</string>
    <string name="card_cvv_text_cvv">CVV</string>
    <string name="card_cvv_edit_text_hint">XXX</string>
    <string name="in_call_hide_key_pad">Hide</string>
    <string name="authentication_text_welcome">Welcome to More Phone.</string>
    <string name="authentication_text_options">More Options</string>
    <string name="authentication_button_facebook">Continue with Facebook</string>
    <string name="authentication_button_google">Sign In</string>
    <string name="authentication_button_create_account">Create Account</string>
    <string name="authentication_menu_login">Log in</string>
    <string name="authentication_text_term_service">By using this app, you are agree to our <b>Terms and Conditions</b></string>
    <string name="text_register_name_title">What\'s your name?</string>
    <string name="text_register_first_name">FIRST NAME</string>
    <string name="text_register_last_name">LAST NAME</string>
    <string name="text_register_email_title">And, your email?</string>
    <string name="text_register_email_address">EMAIL ADDRESS</string>
    <string name="text_register_email_address_facebook_empty">Can not get email from Facebook</string>
    <string name="text_register_title">Sign Up</string>
    <string name="text_register_password_title">Create a password</string>
    <string name="text_register_password_description">Your password must include at least one symbol and be 8 or more character long.</string>
    <string name="text_register_password">PASSWORD</string>
    <string name="text_register_password_show">Show</string>
    <string name="text_register_password_hide">Hide</string>
    <string name="register_password_snack_bar">CHANGE EMAIL</string>
    <string name="message_create_user_fail">You already have an account with this email or This email is fake. Try logging in, instead.</string>
    <string name="message_create_user_fail_password">Your password must at least 6 character.</string>
    <string name="text_register_total_title">Create account</string>
    <string name="text_register_total_description">Make sure your information is correct before continuing.</string>
    <string name="text_forgot_password_title">Forgot your password?</string>
    <string name="text_forgot_password_description">Enter you email to find your account.</string>
    <string name="text_forgot_password_email_address">EMAIL ADDRESS</string>
    <string name="message_reset_success">Please check your email for the password reset email!</string>
    <string name="message_reset_fail">Failed to send reset email!</string>
    <string name="message_send_success">Message has sent</string>
    <string name="message_send_error">Message has sent error</string>
    <string name="text_login_title">Log In</string>
    <string name="text_login_email">EMAIL</string>
    <string name="text_login_password">PASSWORD</string>
    <string name="menu_login_forgot_password">Forgot password</string>
    <string name="action_search">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_bar_title_conversation_label">Conversation</string>
    <string name="box_sms_edit_text_hint">Write a message</string>
    <string name="title_dialog_message">Message Options</string>
    <string name="text_button_cancel_dialog_message">Cancel</string>
    <string name="title_call_log_message">Call Options</string>
    <string name="message_compose_label">Compose</string>
    <string name="message_compose_hint_contacts">Enter recipients</string>
    <string name="ime_name">Sample Soft Keyboard</string>
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <string name="label_subtype_generic">%s</string>
    <string name="label_subtype_en_GB">English (GB)</string>
    <string name="settings_name">Sample Soft Keyboard Settings</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>
    <string name="general_category">General</string>
    <string name="client_name">client name</string>
    <string name="phone_number">phone number</string>
    <string-array name="types">
        <item>Client</item>
        <item>Phone Number</item>
    </string-array>
    <string name="twiml_apps">APbdbf05382a556d66bc8419f36e51a6d6</string>
    <string name="update_capability">Update Capability</string>
    <string name="action_bar_title_voice_label">Voice</string>
    <string name="action_bar_title_phone_label">Phone</string>
    <string name="action_bar_title_dial_label">Dialing from</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="my_number_label">My Numbers</string>
    <string name="usage_label">\u0020Usage</string>
    <string name="setting_label">\u0020Setting</string>
    <string name="change_friendly_name_dialog_title">Change Friendly Name</string>
    <string name="change_friendly_name_dialog_change">CHANGE</string>
    <string name="change_friendly_name_dialog_cancel">CANCEL</string>
    <string name="change_friendly_name_dialog_empty">Please enter friendly name</string>
    <string name="setting_enable_record">Enable Record</string>
    <string name="setting_enable_record_summary">Allow device record a call</string>
    <string name="setting_enable_notification">Enable Notification</string>
    <string name="setting_enable_notification_summary">Allow device show notification</string>
    <string name="setting_version">Version\u0020</string>
    <string name="setting_friendly_name">Friendly name</string>
    <string name="setting_expire">Expire</string>
    <string name="setting_configure_sms_forwarding">Configure SMS Forwarding</string>
    <string name="setting_configure_sms_forwarding_summary">Configure SMS Forwarding</string>
    <string name="setting_phone">Phone</string>
    <string name="setting_email">Email</string>
    <string name="configure_phone_dialog_title">Configure Phone</string>
    <string name="configure_phone_dialog_ok">OK</string>
    <string name="configure_phone_dialog_cancel">CANCEL</string>
    <string name="configure_phone_dialog_empty">Please enter phone number</string>
    <string name="configure_email_dialog_title">Configure Email</string>
    <string name="configure_email_dialog_ok">OK</string>
    <string name="configure_email_dialog_cancel">CANCEL</string>
    <string name="configure_email_dialog_empty">Please enter email</string>
    <string name="license_label">License</string>
    <string name="available_phone_number_empty">We couldn\'t find any numbers that matched your search criteria.</string>
    <string name="buy_number_label">Buy a number</string>
    <string name="buy_number_country">Country</string>
    <string name="buy_number_number">Number</string>
    <string name="buy_number_multiple_select">Multiple select</string>
    <string name="buy_number_search">Search</string>
    <string name="buy_number_sms">SMS</string>
    <string name="buy_number_mms">MMS</string>
    <string name="buy_number_voice">VOICE</string>
    <string name="purchase_label">Purchase</string>
    <string name="purchase_buy_this_number">Buy this number</string>
    <string name="purchase_per_month">per month</string>
    <string name="purchase_voice">Voice</string>
    <string name="purchase_voice_summary">This number can receive incoming calls and make outgoing calls.</string>
    <string name="purchase_message">SMS</string>
    <string name="purchase_message_summary">This number can send and receive text messages to and from mobile numbers.</string>
    <string name="purchase_fax">Fax</string>
    <string name="purchase_fax_summary">This number can send and receive facsimiles</string>
    <string name="purchase_mms">MMS</string>
    <string name="purchase_mms_summary">This number can send and receive multi media messages to and from mobile number</string>
    <string name="purchase_fail">Purchase fail</string>
    <string name="purchase_success">Purchase a phone number success</string>
    <string name="purchase_expire">Expire</string>
    <string name="purchase_expire_now">Expire now</string>
    <string name="purchase_expire_summary">Tap for choose expire date</string>
    <string name="purchase_expire_date_error">Minimum usage phone number one day</string>
    <string name="purchase_expire_date_alert">Please choose expire date</string>
    <string name="purchase_expire_update_success">Update expire success</string>
    <string name="purchase_expire_update_fail">Update expire fail</string>
    <string name="credit_label">Credit</string>
    <string name="credit_title">Your balance:</string>
    <string name="add_fund_label">Add Fund</string>
    <string name="add_fund_title">Specify how much to add to your balance.</string>
    <string name="add_fund_amount_to_add">Amount to add</string>
    <string name="add_fund_button">Add Fund</string>
    <string name="incoming_decline">Decline</string>
    <string name="incoming_accept">Accept</string>
    <string name="incoming_status">Incoming...</string>
    <string name="usage_voice_total">Total</string>
    <string name="usage_voice_incoming">Incoming</string>
    <string name="usage_voice_outgoing">Outgoing</string>
    <string name="usage_voice_missing">Missing</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="contact_add_field_display">Name</string>
    <string name="contact_add_field_phone_number">Phone</string>
    <string name="contact_add_field_email">Email</string>
    <string name="contact_add_field_address">Address</string>
    <string name="contact_add_field_relationship">Relationship</string>
</resources>