<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Icon and titles are set in code for menu_star and menu_edit -->

    <item
        android:id="@+id/menu_edit"
        app:showAsAction="always|collapseActionView"
        android:title="@string/menu_editContact"/>

    <item
        android:id="@+id/menu_delete"
        app:showAsAction="always|collapseActionView"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/menu_deleteContact"/>


    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share"
        app:showAsAction="always|collapseActionView"
        android:icon="@drawable/ic_share_white_24dp" />

</menu>
