<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ethan.morephone.widget.MyTextView
        android:id="@+id/text_buy_number_country"
        style="@style/TextBuyANumberTitle"
        android:layout_marginTop="@dimen/activity_main_margin"
        android:text="@string/buy_number_country" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_buy_number_country"
        style="@style/SpinnerBuyANumberItem"
        android:layout_below="@+id/text_buy_number_country"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <com.ethan.morephone.widget.MyTextView
        android:id="@+id/text_buy_number_number"
        style="@style/TextBuyANumberTitle"
        android:layout_below="@+id/spinner_buy_number_country"
        android:layout_marginTop="@dimen/activity_main_margin"
        android:text="@string/buy_number_number" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edit_text_buy_number_number"
        style="@style/TextBuyANumberTitle"
        android:layout_below="@+id/text_buy_number_number"
        android:layout_marginTop="@dimen/activity_main_margin"
        android:inputType="number" />

    <com.ethan.morephone.widget.MyTextView
        android:id="@+id/text_buy_number_multiple_select"
        style="@style/TextBuyANumberTitle"
        android:layout_below="@+id/edit_text_buy_number_number"
        android:layout_marginTop="@dimen/activity_main_margin"
        android:text="@string/buy_number_multiple_select" />

    <RadioButton
        android:id="@+id/radio_button_sms"
        style="@style/ViewCommon"
        android:layout_below="@+id/text_buy_number_multiple_select"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="SMS" />

    <RadioButton
        android:id="@+id/radio_button_mms"
        style="@style/ViewCommon"
        android:layout_below="@+id/text_buy_number_multiple_select"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toRightOf="@+id/radio_button_sms"
        android:text="MMS" />

    <RadioButton
        android:id="@+id/radio_button_voice"
        style="@style/ViewCommon"
        android:layout_below="@+id/text_buy_number_multiple_select"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toLeftOf="@+id/radio_button_sms"
        android:text="VOICE" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_buy_number_search"
        style="@style/ButtonBlue"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/buy_number_search" />


</RelativeLayout>