<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.ethan.morephone.widget.MyTextView
            android:id="@+id/text_setting_title"
            style="@style/TextDisplay"
            android:layout_marginTop="?attr/actionBarSize"
            android:text="@string/app_name" />

        <com.ethan.morephone.widget.MyTextView
            android:id="@+id/text_setting_version"
            style="@style/TextSettingDisplay"
            android:layout_below="@+id/text_setting_title"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/setting_version" />

        <View
            android:id="@+id/view_divider_1"
            style="@style/Divider"
            android:layout_width="@dimen/width_divider_short"
            android:layout_below="@+id/text_setting_version"
            android:layout_marginTop="@dimen/activity_main_margin" />


        <RelativeLayout
            android:id="@+id/relative_setting_friendly_name"
            style="@style/TextSettingItem"
            android:layout_below="@+id/view_divider_1">

            <com.ethan.morephone.widget.MyTextView
                android:id="@+id/text_setting_friendly_name"
                style="@style/ViewCommon"
                android:text="@string/setting_friendly_name"
                android:textSize="18sp" />

            <com.ethan.morephone.widget.MyTextView
                android:id="@+id/text_setting_friendly_name_set"
                style="@style/ViewCommon"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_setting_friendly_name"
                android:text="Phone 1"
                android:layout_marginTop="4dp" />
        </RelativeLayout>

        <View
            android:id="@+id/view_divider_1a"
            style="@style/Divider"
            android:layout_below="@+id/relative_setting_friendly_name" />

        <RelativeLayout
            android:id="@+id/relative_setting_configure_sms_forwarding"
            style="@style/TextSettingItem"
            android:layout_below="@+id/view_divider_1a">

            <com.ethan.morephone.widget.MyTextView
                android:id="@+id/text_setting_folder"
                style="@style/ViewCommon"
                android:text="@string/setting_configure_sms_forwarding"
                android:textSize="18sp" />

            <com.ethan.morephone.widget.MyTextView
                android:id="@+id/text_setting_folder_set"
                style="@style/ViewCommon"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_setting_folder"
                android:text="SMS"
                android:layout_marginTop="4dp" />
        </RelativeLayout>

        <View
            android:id="@+id/view_divider_1b"
            style="@style/Divider"
            android:layout_below="@+id/relative_setting_configure_sms_forwarding" />

    </RelativeLayout>

</ScrollView>