<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator_layout_register_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundBlue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolBarGreen" />

        <com.ethan.morephone.widget.MyTextView
            android:id="@+id/text_register_total_title"
            style="@style/TextAuthenticationTitle"
            android:layout_below="@+id/tool_bar"
            android:text="@string/text_register_password_title" />

        <com.ethan.morephone.widget.MyTextView
            android:id="@+id/text_register_total_description"
            style="@style/TextAuthenticationTitle"
            android:layout_below="@+id/text_register_total_title"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/text_register_password_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <com.ethan.morephone.widget.MyTextView
            android:id="@+id/text_register_password"
            style="@style/TextAuthenticationField"
            android:layout_below="@+id/text_register_total_description"
            android:layout_marginTop="@dimen/text_authentication_field_margin_top"
            android:text="@string/text_register_password" />

        <com.ethan.morephone.widget.MyTextView
            android:id="@+id/text_register_password_show"
            style="@style/TextAuthenticationField"
            android:layout_alignBottom="@+id/text_register_password"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/text_register_password_show"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_text_password"
            style="@style/EditTextAuthentication"
            android:layout_below="@+id/text_register_password"
            android:ems="10"
            android:inputType="textPassword" />


    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/button_next_step"
        style="@style/ViewCommon"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_arrow_right_green"
        app:backgroundTint="@color/colorGray" />

</android.support.design.widget.CoordinatorLayout>